# pytadarida

./: .gitignore  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: pylint.yml  unit-tests.yml
pytadarida/: __init__.py  __main__.py  cli.py  commands.py  configs.py  logs.py  output.py  parsing.py  tadarida.py  validate_inputs.py
tests/: test_commands.py  test_logs.py  test_output.py  test_parser.py  test_pytadarida.py  test_validate_inputs.py
tests/data/: ta_file_version_1.ta  ta_file_version_2.ta
