[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.2.1",
    "coverage>=7.1.0",
]
docs = [
    "sphinx>=5.3.0",
    "sphinx-autoapi>=2.0.1",
]
formatting = [
    "black>=22.12.0",
    "isort>=5.11.4",
]
lsp = [
    "rope>=1.7.0",
    "flake8>=3.9.2",
    "pycodestyle>=2.7.0",
    "pydocstyle>=6.3.0",
    "pylint>=2.13.9",
    "mypy>=0.991",
    "python-language-server>=0.36.2",
    "pyls-mypy>=0.1.8",
]
debug = [
    "debugpy>=1.6.6",
]

[project]
name = "pytadarida"
version = "0.1.0"
description = "Python wrapper to Tadarida-D software"
authors = [
    {name = "Santiago Martinez", email = "santiago.mbal@gmail.com"},
]
dependencies = [
    "pandas>=1.1.5",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 80
