[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.2.1",
    "coverage>=7.1.0",
]
docs = [
    "sphinx>=6.1.3",
    "sphinx-autoapi>=2.0.1",
]
formatting = [
    "black>=22.12.0",
    "isort>=5.12.0",
]
lsp = [
    "rope>=1.7.0",
    "flake8>=5.0.4",
    "pycodestyle>=2.9.1",
    "pydocstyle>=6.3.0",
    "pylint>=2.15.10",
    "mypy>=0.991",
    "python-language-server>=0.36.2",
    "pyls-mypy>=0.1.8",
]
debug = [
    "debugpy>=1.6.6",
]

[project]
name = "pytadarida"
version = "0.1.0"
description = "Python wrapper to Tadarida-D software"
authors = [
    {name = "Santiago Martinez", email = "santiago.mbal@gmail.com"},
]
dependencies = [
    "pandas>=1.5.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 80

[tool.pyright]
include = ["pytadarida", "tests"]

[tool.rope]
source_folders = ["pytadarida"]
